<resources>
    <string name="app_name">uikit-sample</string>
    <string name="title">UIkit</string>
    <string name="likecount_24_liked_false">likeCount = 24, liked = false</string>
    <string name="likecount_24_liked_true">likeCount = 24, liked = true</string>
    <string name="avatar_set_true_editable_fasle">Avatar set = true, Editable = fasle</string>
    <string name="avatar_set_false_editable_fasle">Avatar set = false, Editable = fasle</string>
    <string name="avatar_set_true_editable_true">Avatar set = true, Editable = true</string>
    <string name="avatar_set_false_editable_true">Avatar set = false, Editable = true</string>
    <string name="selected_chip_group">Selected chip group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar_image_network">Network avatar</string>
    <string name="avatar_drawable">Drawable avatar</string>
    <string name="type_flat_size_small">Type: Flat, Size: Small</string>
    <string name="type_default_size_small">Type: Default, Size: Small</string>
    <string name="type_primary_size_small">Type: Primary, Size: Small</string>
    <string name="type_flat_size_medium">Type: Flat, Size: medium</string>
    <string name="type_default_size_medium">Type: Default, Size: medium</string>
    <string name="type_primary_size_medium">Type: Primary, Size: medium</string>
    <string name="type_flat_size_large">Type: Flat, Size: large</string>
    <string name="type_default_size_large">Type: Default, Size: large</string>
    <string name="type_primary_size_large">Type: primary, Size: large</string>
    <string name="params_sample_top_bar">app:topBar_left_icon=\"@drawable/ic_heart\"\n        app:topBar_right_icon=\"@drawable/ic_heart\"\n        app:topBar_title=\"@string/title\"</string>
    <string name="sms_code_inactive">inactive</string>
    <string name="sms_code_disabled">disabled</string>
    <string name="sms_code_error">error</string>
    <string name="sms_code_focused">focused</string>
</resources>